--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "cakephp-plugin",
     "version": "v1.0-stable",
     "keywords": ["cakephp3", "plugin", "acl"],
-    "homepage": "https://github.com/pedrovalmor/cakephp3-acl-plugin.git",
+    "homepage": "https://github.com/pedrovalmor/cakephp3-acl-plugin",
     "description": "ACL plugin for CakePhp3",
     "authors": [
         {
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "3.*",
+        "cakephp/cakephp": "~3.0",
         "cakephp/acl": "dev-master"
     },
     "require-dev": {
